--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Tuition</title>
+    <!-- bootsrap css -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css">
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
+    <!-- JQuery js file -->
     
+    <!-- bootstrap js  -->
+    <script src="./js/bootstrap.min.js"></script>
 </body>
 </html>
