Add JQuery to HTML file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- JQuery js file -->
-    
+    <script src="./js/jquery-3.5.1.min.js"></script>
     <!-- bootstrap js  -->
     <script src="./js/bootstrap.min.js"></script>
 </body>
