Add the fontawesome icons

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Daily Tuition</title>
     <!-- bootsrap css -->
     <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css">
+    <!-- fontawesome icons  -->
+    <link rel="stylesheet" href="./css/all.min.css">
     <!-- custom css -->
     <link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
+    
     <!-- JQuery js file -->
     <script src="./js/jquery-3.5.1.min.js"></script>
     <!-- bootstrap js  -->
